--- a/scss/componentes/footer-pags/_privacidad.scss
+++ b/scss/componentes/footer-pags/_privacidad.scss
@@ -1,16 +1,5 @@
 .privBody {
-    background-color: rgb(53, 10, 133);
-    header {
-        background-color: $rosaOscuro;
-    }
 
-    footer {
-        background-color: rgb(78, 78, 78);
-
-        .mandar {
-            color: rgb(78, 78, 78) !important;
-        }
-    }
 
     .politica-priv {
         width: 500px;
@@ -19,7 +8,7 @@
 
         h2 {
             font-weight: 900;
-            color: $azul;
+            color: rgb(0, 187, 140);
             font-size: 50px;
             margin-bottom: 30px;
         }
@@ -32,7 +21,7 @@
 
             span {
                 font-size: $size *3.5;
-                color: $azul;
+                color: rgb(0, 187, 140);
             }
         }   
     }
