--- a/scss/componentes/pags/_grupos.scss
+++ b/scss/componentes/pags/_grupos.scss
@@ -1,10 +1,3 @@
-// 1: pagina
-// 2: hover
-// 3: letra
-
-// background-color: rgb(44, 42, 53) ;
-// rgb(99, 99, 99),
-// white;
 
 .light {
     transition: all 1s;
@@ -36,6 +29,17 @@
 
                 &:hover {
                     background-color: $azulOscuro;
+                }
+            }
+        }
+
+        .perfil {
+            
+            svg {
+                fill: #201f23;
+
+                &:hover {
+                    filter:contrast(0.3);
                 }
             }
         }
@@ -75,13 +79,28 @@
                 }
             }
         }
+
+        .perfil { 
+            svg {
+                fill: white;
+
+                &:hover {
+                    filter:contrast(0.3);
+                }
+            }
+
+            .perfil-options {
+                filter: drop-shadow(0px 0px 0px white);
+            }
+        }
     }
 }
 
 #gruposBody {
+    display: grid;
+    grid-template-columns: 230px auto;
 
     header {
-        position: fixed;
         @include flex (column, space-between);
         height: 100vh;
         color: white;
@@ -134,7 +153,32 @@
                 .nombreUsuario {
                     margin-right: 30px;
                     font-weight: 400;
-                }                
+                }    
+                
+                .perfil-options {
+                    position: absolute;
+                    top: 100px;
+                    right: 20px;
+                    width: 200px;
+                    padding: 20px;
+                    border-radius: 20px;
+                    background-color: white;
+
+                    button {
+                        background: none;
+                        border: none;
+                    }
+
+                }
+
+                .cerrado {
+                    display: none;
+                }
+
+                .abierto {
+                    display: inline-block;
+                }
+
             }
 
             .buscadorG {
