--- a/scss/style.css
+++ b/scss/style.css
@@ -797,6 +797,15 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   background-color: #4500bb;
 }
 
+.light .grupos-pag .perfil svg {
+  fill: #201f23;
+}
+
+.light .grupos-pag .perfil svg:hover {
+  -webkit-filter: contrast(0.3);
+          filter: contrast(0.3);
+}
+
 .dark {
   -webkit-transition: all 1s;
   transition: all 1s;
@@ -830,8 +839,28 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   background-color: #5902EC;
 }
 
+.dark .grupos-pag .perfil svg {
+  fill: white;
+}
+
+.dark .grupos-pag .perfil svg:hover {
+  -webkit-filter: contrast(0.3);
+          filter: contrast(0.3);
+}
+
+.dark .grupos-pag .perfil .perfil-options {
+  -webkit-filter: drop-shadow(0px 0px 0px white);
+          filter: drop-shadow(0px 0px 0px white);
+}
+
+#gruposBody {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 230px auto;
+      grid-template-columns: 230px auto;
+}
+
 #gruposBody header {
-  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -919,6 +948,29 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 #gruposBody .grupos-pag .headerFake .perfil .nombreUsuario {
   margin-right: 30px;
   font-weight: 400;
+}
+
+#gruposBody .grupos-pag .headerFake .perfil .perfil-options {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  width: 200px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: white;
+}
+
+#gruposBody .grupos-pag .headerFake .perfil .perfil-options button {
+  background: none;
+  border: none;
+}
+
+#gruposBody .grupos-pag .headerFake .perfil .cerrado {
+  display: none;
+}
+
+#gruposBody .grupos-pag .headerFake .perfil .abierto {
+  display: inline-block;
 }
 
 #gruposBody .grupos-pag .headerFake .buscadorG {
@@ -1334,6 +1386,15 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   background-color: #4500bb;
 }
 
+.light .grupos-pag .perfil svg {
+  fill: #201f23;
+}
+
+.light .grupos-pag .perfil svg:hover {
+  -webkit-filter: contrast(0.3);
+          filter: contrast(0.3);
+}
+
 .dark {
   -webkit-transition: all 1s;
   transition: all 1s;
@@ -1367,8 +1428,28 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   background-color: #5902EC;
 }
 
+.dark .grupos-pag .perfil svg {
+  fill: white;
+}
+
+.dark .grupos-pag .perfil svg:hover {
+  -webkit-filter: contrast(0.3);
+          filter: contrast(0.3);
+}
+
+.dark .grupos-pag .perfil .perfil-options {
+  -webkit-filter: drop-shadow(0px 0px 0px white);
+          filter: drop-shadow(0px 0px 0px white);
+}
+
+#gruposBody {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 230px auto;
+      grid-template-columns: 230px auto;
+}
+
 #gruposBody header {
-  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1456,6 +1537,29 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 #gruposBody .grupos-pag .headerFake .perfil .nombreUsuario {
   margin-right: 30px;
   font-weight: 400;
+}
+
+#gruposBody .grupos-pag .headerFake .perfil .perfil-options {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  width: 200px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: white;
+}
+
+#gruposBody .grupos-pag .headerFake .perfil .perfil-options button {
+  background: none;
+  border: none;
+}
+
+#gruposBody .grupos-pag .headerFake .perfil .cerrado {
+  display: none;
+}
+
+#gruposBody .grupos-pag .headerFake .perfil .abierto {
+  display: inline-block;
 }
 
 #gruposBody .grupos-pag .headerFake .buscadorG {
